@@ -17,6 +17,8 @@
   (Importing with --import=file.pdf does not import anything)
 * Fix updating extended page numbering on scan dialog after changing document
 * Fix printing. Closes bug #331 (print error suse leap 15.1)
+* Set "wait" cursor while scan options are being loaded and "progress" cursor
+  while scanning.
 
 
 2.5.5 (19.07.2019):
